# fcitx-autotheme

./: .gitignore  Cargo.toml  README.md  README_CN.md  clippy.toml  rustfmt.toml  watch-theme-then-update-fcitx-theme
src/: main.rs
